--- a/.travis.yml
+++ b/.travis.yml
@@ -1,45 +1,27 @@
 language: elixir
 elixir:
-  - 1.3.2
+  - 1.2.2
 otp_release:
   - 18.2
-addons:
-  postgresql: "9.5"
-sudo: required
-dist: trusty # only environment that supports Postgres 9.5 at this time
+
+before_install:
+  - sudo apt-add-repository ppa:bitcoin/bitcoin -y
+  - sudo apt-get update -qq
+  - sudo apt-get install bitcoind -y
+
+apt_packages:
+  - bitcoind
+
 install:
   - mix local.hex --force
   - mix local.rebar --force
   - mix deps.get
+
+before_script:
+  - mkdir -p /home/travis/.bitcoin && cp bitcoin.conf /home/travis/.bitcoin/bitcoin.conf
+  - bitcoind -regtest -daemon
 script:
   - mix test
 notifications:
   recipients:
     - kelostrada@gmail.com
-# language: elixir
-# elixir:
-#   - 1.2.2
-# otp_release:
-#   - 18.2
-
-# before_install:
-#   - sudo apt-add-repository ppa:bitcoin/bitcoin -y
-#   - sudo apt-get update -qq
-#   - sudo apt-get install bitcoind -y
-
-# apt_packages:
-#   - bitcoind
-
-# install:
-#   - mix local.hex --force
-#   - mix local.rebar --force
-#   - mix deps.get
-
-# before_script:
-#   - mkdir -p /home/travis/.bitcoin && cp bitcoin.conf /home/travis/.bitcoin/bitcoin.conf
-#   - bitcoind -regtest -daemon
-# script:
-#   - mix test
-# notifications:
-#   recipients:
-#     - kelostrada@gmail.com
