change version of bitcoind in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ otp_release:
 before_install:
   - sudo apt-add-repository ppa:bitcoin/bitcoin -y
   - sudo apt-get update -qq
-  - sudo apt-get install bitcoind -y
+  - sudo apt-get install bitcoind=0.12.1-precise1 -y
 
 apt_packages:
   - bitcoind
