--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ otp_release:
 before_install:
   - sudo apt-add-repository ppa:bitcoin/bitcoin -y
   - sudo apt-get update -qq
-  - sudo apt-get install bitcoind=0.12.1 -y
+  - sudo apt-get install bitcoind -y
+  - wget https://bitcoin.org/bin/bitcoin-core-0.12.1/bitcoin-0.12.1-linux64.tar.gz && tar -xzvf bitcoin-0.12.1-linux64.tar.gz -C /home/travis
 
 apt_packages:
   - bitcoind
@@ -19,7 +20,8 @@ install:
 
 before_script:
   - mkdir -p /home/travis/.bitcoin && cp bitcoin.conf /home/travis/.bitcoin/bitcoin.conf
-  - bitcoind -regtest -daemon
+  - /home/travis/bitcoin-0.12.1/bin/bitcoind -regtest -daemon
+  # - bitcoind -regtest -daemon
 script:
   - mix test
 notifications:
