--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,13 @@ otp_release:
   - 18.2
 
 before_install:
-  - sudo apt-add-repository ppa:bitcoin/bitcoin -y
-  - sudo apt-get update -qq
-  - sudo apt-get install bitcoind -y
+  # - sudo apt-add-repository ppa:bitcoin/bitcoin -y
+  # - sudo apt-get update -qq
+  # - sudo apt-get install bitcoind -y
   - wget https://bitcoin.org/bin/bitcoin-core-0.12.1/bitcoin-0.12.1-linux64.tar.gz && tar -xzvf bitcoin-0.12.1-linux64.tar.gz -C /home/travis
 
-apt_packages:
-  - bitcoind
+# apt_packages:
+#   - bitcoind
 
 install:
   - mix local.hex --force
@@ -23,6 +23,7 @@ before_script:
   - /home/travis/bitcoin-0.12.1/bin/bitcoind -regtest -daemon
   # - bitcoind -regtest -daemon
 script:
+  - /home/travis/bitcoin-0.12.1/bin/bitcoin-cli generate 10
   - mix test
 notifications:
   recipients:
