--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,13 @@
 language: elixir
 elixir:
+  - 1.3.3
   - 1.2.2
 otp_release:
-  - 18.2
+  - 18.0
+  - 19.0
 
 before_install:
-  # - sudo apt-add-repository ppa:bitcoin/bitcoin -y
-  # - sudo apt-get update -qq
-  # - sudo apt-get install bitcoind -y
   - wget https://bitcoin.org/bin/bitcoin-core-0.12.1/bitcoin-0.12.1-linux64.tar.gz && tar -xzvf bitcoin-0.12.1-linux64.tar.gz -C /home/travis
-
-# apt_packages:
-#   - bitcoind
 
 install:
   - mix local.hex --force
@@ -21,9 +17,8 @@ install:
 before_script:
   - mkdir -p /home/travis/.bitcoin && cp bitcoin.conf /home/travis/.bitcoin/bitcoin.conf
   - /home/travis/bitcoin-0.12.1/bin/bitcoind -regtest -daemon
-  # - bitcoind -regtest -daemon
 script:
-  - /home/travis/bitcoin-0.12.1/bin/bitcoin-cli generate 10
+  - sleep 10 && /home/travis/bitcoin-0.12.1/bin/bitcoin-cli generate 10
   - mix test
 notifications:
   recipients:
