--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: elixir
 elixir:
   - 1.3.3
-  - 1.2.2
+  - 1.3.4
+#  - 1.2.2
 otp_release:
   - 18.0
   - 19.0
@@ -18,7 +19,7 @@ before_script:
   - mkdir -p /home/travis/.bitcoin && cp bitcoin.conf /home/travis/.bitcoin/bitcoin.conf
   - /home/travis/bitcoin-0.12.1/bin/bitcoind -regtest -daemon
 script:
-  - sleep 10 && /home/travis/bitcoin-0.12.1/bin/bitcoin-cli generate 101
+  - sleep 15
   - mix test
 notifications:
   recipients:
