--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ otp_release:
   - 19.0
 
 before_install:
-  - wget https://bitcoin.org/bin/bitcoin-core-0.12.1/bitcoin-0.12.1-linux64.tar.gz && tar -xzvf bitcoin-0.12.1-linux64.tar.gz -C /home/travis
+  - wget https://bitcoin.org/bin/bitcoin-core-0.14.0/bitcoin-0.14.0-x86_64-linux-gnu.tar.gz  && tar -xzvf bitcoin-0.14.0-x86_64-linux-gnu.tar.gz -C /home/travis
 
 install:
   - mix local.hex --force
@@ -16,7 +16,7 @@ install:
 
 before_script:
   - mkdir -p /home/travis/.bitcoin && cp bitcoin.conf /home/travis/.bitcoin/bitcoin.conf
-  - /home/travis/bitcoin-0.12.1/bin/bitcoind -regtest -daemon
+  - /home/travis/bitcoin-0.14.0/bin/bitcoind -regtest -daemon
 script:
   - sleep 15
   - mix test
